added popup mentor

--- a/index.html
+++ b/index.html
@@ -246,13 +246,11 @@
             </div>
             <div class="container">
               <div class="tutors-card__info">
-                <p class="tutors-card__description">
-                  Досвід в IT понад 25 років. Конкретно програмування - більш як 8 років. Саме Web...
-                </p>
+                <p class="tutors-card__description">Досвід в IT понад 25 років. Конкретно програмування - більш як 8 років. Саме Web...</p>
                 <div class="tutors-card__course">
                   <p>Курс:</p>
                   <p>Front-End</p>
-                  <a class="tutors-card__course-link more-info-link" href="">Опис повністю</a>
+                  <a class="tutors-card__course-link more-info-link" href="" data-trigger="1">Опис повністю</a>
                 </div>
               </div>
             </div>
@@ -271,13 +269,11 @@
             </div>
             <div class="container">
               <div class="tutors-card__info">
-                <p class="tutors-card__description">
-                  Професійний викладач (постійна робота у закладі вищої освіти) к.т.н.
-                </p>
+                <p class="tutors-card__description">Професійний викладач (постійна робота у закладі вищої освіти) к.т.н.</p>
                 <div class="tutors-card__course">
                   <p>Курс:</p>
                   <p>Front-End</p>
-                  <a class="tutors-card__course-link more-info-link" href="">Опис повністю</a>
+                  <a class="tutors-card__course-link more-info-link" href="" data-trigger="2">Опис повністю</a>
                 </div>
               </div>
             </div>
@@ -296,13 +292,11 @@
             </div>
             <div class="container">
               <div class="tutors-card__info">
-                <p class="tutors-card__description">
-                  Досвід на фрілансі близько 3-5 місяців. Зараз понад рік працює у...
-                </p>
+                <p class="tutors-card__description">Досвід на фрілансі близько 3-5 місяців. Зараз понад рік працює у...</p>
                 <div class="tutors-card__course">
                   <p>Курс:</p>
                   <p>Front-End</p>
-                  <a class="tutors-card__course-link more-info-link" href="">Опис повністю</a>
+                  <a class="tutors-card__course-link more-info-link" href="" data-trigger="3">Опис повністю</a>
                 </div>
               </div>
             </div>
@@ -321,13 +315,11 @@
             </div>
             <div class="container">
               <div class="tutors-card__info">
-                <p class="tutors-card__description">
-                  3 роки працює розробником та 6 місяців викладає
-                </p>
+                <p class="tutors-card__description">3 роки працює розробником та 6 місяців викладає</p>
                 <div class="tutors-card__course">
                   <p>Курс:</p>
                   <p>Front-End</p>
-                  <a class="tutors-card__course-link more-info-link" href="">Опис повністю</a>
+                  <a class="tutors-card__course-link more-info-link" href="" data-trigger="4">Опис повністю</a>
                 </div>
               </div>
             </div>
@@ -346,13 +338,11 @@
             </div>
             <div class="container">
               <div class="tutors-card__info">
-                <p class="tutors-card__description">
-                  1.5 років комерційного досвіду
-                </p>
+                <p class="tutors-card__description">1.5 років комерційного досвіду</p>
                 <div class="tutors-card__course">
                   <p>Курс:</p>
                   <p>Front-End</p>
-                  <a class="tutors-card__course-link more-info-link" href="">Опис повністю</a>
+                  <a class="tutors-card__course-link more-info-link" href="" data-trigger="5">Опис повністю</a>
                 </div>
               </div>
             </div>
@@ -371,13 +361,11 @@
             </div>
             <div class="container">
               <div class="tutors-card__info">
-                <p class="tutors-card__description">
-                  2 роки комерційного досвіду 
-                </p>
+                <p class="tutors-card__description">2 роки комерційного досвіду</p>
                 <div class="tutors-card__course">
                   <p>Курс:</p>
                   <p>Front-End</p>
-                  <a class="tutors-card__course-link more-info-link" href="">Опис повністю</a>
+                  <a class="tutors-card__course-link more-info-link" href="" data-trigger="6">Опис повністю</a>
                 </div>
               </div>
             </div>
@@ -396,13 +384,11 @@
             </div>
             <div class="container">
               <div class="tutors-card__info">
-                <p class="tutors-card__description">
-                  3 місяці викладання в N-Code
-                </p>
+                <p class="tutors-card__description">3 місяці викладання в N-Code</p>
                 <div class="tutors-card__course">
                   <p>Курс:</p>
                   <p>Front-End</p>
-                  <a class="tutors-card__course-link more-info-link" href="">Опис повністю</a>
+                  <a class="tutors-card__course-link more-info-link" href="" data-trigger="7">Опис повністю</a>
                 </div>
               </div>
             </div>
@@ -421,13 +407,11 @@
             </div>
             <div class="container">
               <div class="tutors-card__info">
-                <p class="tutors-card__description">
-                  Має 2,5 роки професійного досвіду роботи з - html5/css3/scss/js/ts/react/red...
-                </p>
+                <p class="tutors-card__description">Має 2,5 роки професійного досвіду роботи з - html5/css3/scss/js/ts/react/red...</p>
                 <div class="tutors-card__course">
                   <p>Курс:</p>
                   <p>Front-End</p>
-                  <a class="tutors-card__course-link more-info-link" href="">Опис повністю</a>
+                  <a class="tutors-card__course-link more-info-link" href="" data-trigger="8">Опис повністю</a>
                 </div>
               </div>
             </div>
@@ -592,9 +576,7 @@
             </div>
             <div class="container">
               <div class="tutors-card__info">
-                <p class="tutors-card__description">
-                  Навчання в N-Code дуже сподобалось. Викладачі мають професійний...
-                </p>
+                <p class="tutors-card__description">Навчання в N-Code дуже сподобалось. Викладачі мають професійний...</p>
                 <div class="tutors-card__course">
                   <p>Курс:</p>
                   <p>Front-End</p>
@@ -874,50 +856,219 @@
       </div>
     </footer>
 
-    <div class="popup mentor-info-popup">
+    <div class="popup mentor-info-popup" data-content-mentor="1">
       <div class="popup-body">
         <div class="popup__close"></div>
         <div class="mentor-info-popup__top">
-          <div class="mentor-info-popup__img">
-            <img src="img//tutors-img.svg" alt="tutor" />
+            <div class="mentor-info-popup__wrapper">
+            <div class="mentor-info-popup__img">
+              <img src="img/tutors/misha.png" alt="tutor" />
+            </div>
+            <p class="mentor-info-popu__name">Михайло</p>
           </div>
-          <p class="mentor-info-popu__name">Им’я Прізвище</p>
           <div class="tutors-card__rate">
-            <i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-regular fa-star"></i
-            ><i class="mentors__star fa-regular fa-star"></i><i class="mentors__star fa-regular fa-star"></i
-            ><i class="mentors__star fa-regular fa-star"></i>
+            <i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+            ><i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+            ><i class="mentors__star fa-solid fa-star"></i>
           </div>
         </div>
         <div class="mentor-info-popup__bottom">
-          <p>Що викладає ментор</p>
-          <div class="col">
-            <div class="mentor-info__block">
-              <p class="mentor-info-popup__title">З чим можу допомогти:</p>
-              <ul>
-                <li>- допоможу</li>
-                <li>- допоможу</li>
-                <li>- допоможу</li>
-                <li>- допоможу</li>
-                <li>- допоможу</li>
-                <li>- допоможу</li>
-                <li>- допоможу</li>
-              </ul>
-            </div>
+          <div class="mentor-info__block">
+           <p>Досвід в IT понад 25 років. Конкретно програмування - більш як 8 років. 
+            Саме Web - 6 років. Спеціалізація JavaScript Fullstack. У компаніях ніколи не працював і не збираюся. Маю мінімальний досвід 
+            у фрілансі. Переважно програмую для себе. Але у мене понад 9 років досвіду викладання, 6 з них - програмування та веб. 
+            Загалом більш як 300 учнів з веброзробки, формат - індивідуальний та групи. Понад 20 з них повідомили, що працевлаштувалися. 
+            Дуже люблю вчити, допомагати, відповідати на питання, ділитися досвідом. Віддаю перевагу цілком індивідуальному підходу, 
+            адже всі люди різні. Кожному потрібне інше пояснення на зрозумілих йому прикладах. Надзвичайно полюбляю базові технології, 
+            як то кажуть vanilla: HTML, CSS, JS, NodeJS, DevTools. Бібліотеки, модулі та фреймворки цікавіше писати свої, 
+            ніж користуватися чужими. Хоча, звісно, у комерційній розробці часом обирати не доводиться. Інші технології, 
+            в яких маю обмежений досвід: React, Vue, MongoDB, Bootstrap, SCSS, Express, Python, PHP, SQL. <br> Спокійний, терплячий, оптиміст. 
+            Мови викладання: українська, російська, англійська. 
+            Більше про формати занять у моєму профілі на GitHub:github.com/unibreakfast</p>
           </div>
-          <div class="col">
-            <div class="mentor-info__block">
-              <p class="mentor-info-popup__title">Про мене</p>
-              <p>Основна загальна інформація про викладача</p>
-            </div>
-            <div class="mentor-info__block">
-              <p class="mentor-info-popup__title">Досвід роботи</p>
-              <p>теперішнє місце роботи</p>
-              <p>попередні місця роботи</p>
-            </div>
-          </div>
+          <p class="mentor-info__course-title">Курс:</p>
+          <p>Front-End</p>
         </div>
       </div>
     </div>
+    <div class="popup mentor-info-popup" data-content-mentor="2">
+      <div class="popup-body">
+        <div class="popup__close"></div>
+        <div class="mentor-info-popup__top">
+            <div class="mentor-info-popup__wrapper">
+            <div class="mentor-info-popup__img">
+              <img src="img/tutors/andriy_kl.jpeg" alt="tutor" />
+            </div>
+            <p class="mentor-info-popu__name">Андрій</p>
+          </div>
+          <div class="tutors-card__rate">
+            <i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+            ><i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+            ><i class="mentors__star fa-solid fa-star"></i>
+          </div>
+        </div>
+        <div class="mentor-info-popup__bottom">
+          <div class="mentor-info__block">
+           <p> <b>Досвід роботи:</b> Професійний викладач (постійна робота у закладі вищої освіти) к.т.н. У веб-розробці - понад 10 років. Курси: HTML, CSS, JS</p>
+          </div>
+          <p class="mentor-info__course-title">Курс:</p>
+          <p>Front-End</p>
+        </div>
+      </div>
+    </div>
+    <div class="popup mentor-info-popup" data-content-mentor="3">
+      <div class="popup-body">
+        <div class="popup__close"></div>
+        <div class="mentor-info-popup__top">
+            <div class="mentor-info-popup__wrapper">
+            <div class="mentor-info-popup__img">
+              <img src="img/tutors/andriy_gum.jpeg" alt="tutor" />
+            </div>
+            <p class="mentor-info-popu__name">Андрій</p>
+          </div>
+          <div class="tutors-card__rate">
+            <i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+            ><i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+            ><i class="mentors__star fa-solid fa-star"></i>
+          </div>
+        </div>
+        <div class="mentor-info-popup__bottom">
+          <div class="mentor-info__block">
+           <p>Досвід на фрілансі близько 3-5 місяців. Зараз понад рік працює у швейцарській компанії Swisscows AG та викладає в N-Code.
+            На основній роботі працює з HTML, CSS, JS, React, Redux, Next.JS</p>
+          </div>
+          <p class="mentor-info__course-title">Курс:</p>
+          <p>Front-End</p>
+        </div>
+      </div>
+    </div>
+    <div class="popup mentor-info-popup" data-content-mentor="4">
+      <div class="popup-body">
+        <div class="popup__close"></div>
+        <div class="mentor-info-popup__top">
+            <div class="mentor-info-popup__wrapper">
+            <div class="mentor-info-popup__img">
+              <img src="img/tutors/vlad.jpeg" alt="tutor" />
+            </div>
+            <p class="mentor-info-popu__name">Владислав</p>
+          </div>
+          <div class="tutors-card__rate">
+            <i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+            ><i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+            ><i class="mentors__star fa-solid fa-star"></i>
+          </div>
+        </div>
+        <div class="mentor-info-popup__bottom">
+          <div class="mentor-info__block">
+           <p><b>Досвід роботи:</b> 3 роки працює розробником та 6 місяців викладає</p>
+          </div>
+          <p class="mentor-info__course-title">Курс:</p>
+          <p>Front-End</p>
+        </div>
+      </div>
+    </div>
+    <div class="popup mentor-info-popup" data-content-mentor="5">
+      <div class="popup-body">
+        <div class="popup__close"></div>
+        <div class="mentor-info-popup__top">
+            <div class="mentor-info-popup__wrapper">
+            <div class="mentor-info-popup__img">
+              <img src="img/tutors/sergiy_m.jpeg" alt="tutor" />
+            </div>
+            <p class="mentor-info-popu__name">Сергій</p>
+          </div>
+          <div class="tutors-card__rate">
+            <i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+            ><i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+            ><i class="mentors__star fa-solid fa-star"></i>
+          </div>
+        </div>
+        <div class="mentor-info-popup__bottom">
+          <div class="mentor-info__block">
+           <p><b>Досвід роботи:</b> 1.5 років комерційного досвіду</p>
+          </div>
+          <p class="mentor-info__course-title">Курс:</p>
+          <p>Front-End</p>
+        </div>
+      </div>
+    </div>
+    <div class="popup mentor-info-popup" data-content-mentor="6">
+      <div class="popup-body">
+        <div class="popup__close"></div>
+        <div class="mentor-info-popup__top">
+            <div class="mentor-info-popup__wrapper">
+            <div class="mentor-info-popup__img">
+              <img src="img/tutors/andriy_gr.jpeg" alt="tutor" />
+            </div>
+            <p class="mentor-info-popu__name">Андрій</p>
+          </div>
+          <div class="tutors-card__rate">
+            <i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+            ><i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+            ><i class="mentors__star fa-solid fa-star"></i>
+          </div>
+        </div>
+        <div class="mentor-info-popup__bottom">
+          <div class="mentor-info__block">
+           <p><b>Досвід роботи:</b> 2 роки комерційного досвіду</p>
+          </div>
+          <p class="mentor-info__course-title">Курс:</p>
+          <p>Front-End</p>
+        </div>
+      </div>
+    </div>
+    <div class="popup mentor-info-popup" data-content-mentor="7">
+      <div class="popup-body">
+        <div class="popup__close"></div>
+        <div class="mentor-info-popup__top">
+            <div class="mentor-info-popup__wrapper">
+            <div class="mentor-info-popup__img">
+              <img src="img/tutors/yana.jpeg" alt="tutor" />
+            </div>
+            <p class="mentor-info-popu__name">Яна</p>
+          </div>
+          <div class="tutors-card__rate">
+            <i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+            ><i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+            ><i class="mentors__star fa-solid fa-star"></i>
+          </div>
+        </div>
+        <div class="mentor-info-popup__bottom">
+          <div class="mentor-info__block">
+           <p><b>Досвід роботи:</b> 3 місяці викладання в N-Code</p>
+          </div>
+          <p class="mentor-info__course-title">Курс:</p>
+          <p>Front-End</p>
+        </div>
+      </div>
+    </div>
+    <div class="popup mentor-info-popup" data-content-mentor="8">
+      <div class="popup-body">
+        <div class="popup__close"></div>
+        <div class="mentor-info-popup__top">
+            <div class="mentor-info-popup__wrapper">
+            <div class="mentor-info-popup__img">
+              <img src="img/tutors/olexiy.jpg" alt="tutor" />
+            </div>
+            <p class="mentor-info-popu__name">Олексій</p>
+          </div>
+          <div class="tutors-card__rate">
+            <i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+            ><i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+            ><i class="mentors__star fa-solid fa-star"></i>
+          </div>
+        </div>
+        <div class="mentor-info-popup__bottom">
+          <div class="mentor-info__block">
+           <p><b>Досвід роботи:</b> 2,5 роки професійного досвіду з - HTML5, CSS3, SCSS, JS, TS, React, Redux</p>
+          </div>
+          <p class="mentor-info__course-title">Курс:</p>
+          <p>Front-End</p>
+        </div>
+      </div>
+    </div>
+
+
     <div class="popup feedback-popup" data-content="1">
       <div class="popup-body">
         <div class="popup__close"></div>
