fix feedback view

--- a/index.html
+++ b/index.html
@@ -607,12 +607,12 @@
                 <div class="tutors-card__course">
                   <p>Курс:</p>
                   <p>Front-End</p>
-                  <a class="tutors-card__course-link more-info-link" data-trigger="2">Відгук повністю</a>
                 </div>
                 <div class="tutors-card__tutor">
                   <p>Викладач:</p>
                   <p>Владислав Хаус</p>
                 </div>
+                <a class="tutors-card__course-link more-info-link" data-trigger="2">Відгук повністю</a>
               </div>
             </div>
           </div>
@@ -631,17 +631,17 @@
             <div class="container">
               <div class="tutors-card__info">
                 <p class="tutors-card__description">
-                  3 навчанням все добре, мені все подобається. Репетитор класний, все добре пояснює та навчає!)
+                  3 навчанням все добре, мені все подобається. Репетитор класний, все...
                 </p>
                 <div class="tutors-card__course">
                   <p>Курс:</p>
                   <p>Front-End</p>
-                  <a class="tutors-card__course-link more-info-link" data-trigger="3">Відгук повністю</a>
                 </div>
                 <div class="tutors-card__tutor">
                   <p>Викладач:</p>
                   <p>Олексій Козаковський</p>
                 </div>
+                <a class="tutors-card__course-link more-info-link" data-trigger="3">Відгук повністю</a>
               </div>
             </div>
           </div>
@@ -660,18 +660,17 @@
             <div class="container">
               <div class="tutors-card__info">
                 <p class="tutors-card__description">
-                  Навчання йде не погано. Займаюсь з Сергієм, дуже хороший ментор. Я людина, яка не говорить багато, взагалі мене все
-                  влаштовує
+                  Навчання йде не погано. Займаюсь з Сергієм, дуже хороший ментор.
                 </p>
                 <div class="tutors-card__course">
                   <p>Курс:</p>
                   <p>Front-End</p>
-                  <a class="tutors-card__course-link more-info-link" data-trigger="4">Відгук повністю</a>
                 </div>
                 <div class="tutors-card__tutor">
                   <p>Викладач:</p>
                   <p>Сергій Популях</p>
                 </div>
+                <a class="tutors-card__course-link more-info-link" data-trigger="4">Відгук повністю</a>
               </div>
             </div>
           </div>
@@ -689,16 +688,16 @@
             </div>
             <div class="container">
               <div class="tutors-card__info">
-                <p class="tutors-card__description">Я мама студентки Мілани Кураса. Все дуже добре. Подобається і вчитель і предмет.</p>
+                <p class="tutors-card__description">Я мама студентки Мілани Кураса. Все дуже добре. Подобається і вчитель..</p>
                 <div class="tutors-card__course">
                   <p>Курс:</p>
                   <p>Front-End</p>
-                  <a class="tutors-card__course-link more-info-link" data-trigger="5">Відгук повністю</a>
                 </div>
                 <div class="tutors-card__tutor">
                   <p>Викладач:</p>
                   <p>Яна Паламарчук</p>
                 </div>
+                <a class="tutors-card__course-link more-info-link" data-trigger="5">Відгук повністю</a>
               </div>
             </div>
           </div>
