--- a/index.html
+++ b/index.html
@@ -583,36 +583,9 @@
                 </div>
                 <div class="tutors-card__tutor">
                   <p>Викладач:</p>
-                  <p>Михайло Великосельський</p>
+                  <p>Михайло</p>
                 </div>
                 <a class="tutors-card__course-link more-info-link" data-trigger="1">Відгук повністю</a>
-              </div>
-            </div>
-          </div>
-          <div class="tutors-card">
-            <div class="tutors-card__top">
-              <div class="tutors-card__img">
-                <img src="img/feedback/woman.svg" alt="tutor" />
-              </div>
-              <p class="tutors-card__name">Юлия</p>
-              <div class="tutors-card__rate">
-                <i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
-                ><i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
-                ><i class="mentors__star fa-solid fa-star"></i>
-              </div>
-            </div>
-            <div class="container">
-              <div class="tutors-card__info">
-                <p class="tutors-card__description">Отлично. Все нравится, все устраивает</p>
-                <div class="tutors-card__course">
-                  <p>Курс:</p>
-                  <p>Front-End</p>
-                </div>
-                <div class="tutors-card__tutor">
-                  <p>Викладач:</p>
-                  <p>Владислав Хаус</p>
-                </div>
-                <a class="tutors-card__course-link more-info-link" data-trigger="2">Відгук повністю</a>
               </div>
             </div>
           </div>
@@ -639,9 +612,36 @@
                 </div>
                 <div class="tutors-card__tutor">
                   <p>Викладач:</p>
-                  <p>Олексій Козаковський</p>
+                  <p>Олексій</p>
                 </div>
                 <a class="tutors-card__course-link more-info-link" data-trigger="3">Відгук повністю</a>
+              </div>
+            </div>
+          </div>
+          <div class="tutors-card">
+            <div class="tutors-card__top">
+              <div class="tutors-card__img">
+                <img src="img/feedback/woman.svg" alt="tutor" />
+              </div>
+              <p class="tutors-card__name">Юлія</p>
+              <div class="tutors-card__rate">
+                <i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+                ><i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+                ><i class="mentors__star fa-solid fa-star"></i>
+              </div>
+            </div>
+            <div class="container">
+              <div class="tutors-card__info">
+                <p class="tutors-card__description">Чудово. Все подобається, все влаштовує </p>
+                <div class="tutors-card__course">
+                  <p>Курс:</p>
+                  <p>Front-End</p>
+                </div>
+                <div class="tutors-card__tutor">
+                  <p>Викладач:</p>
+                  <p>Владислав</p>
+                </div>
+                <a class="tutors-card__course-link more-info-link" data-trigger="2">Відгук повністю</a>
               </div>
             </div>
           </div>
@@ -668,7 +668,7 @@
                 </div>
                 <div class="tutors-card__tutor">
                   <p>Викладач:</p>
-                  <p>Сергій Популях</p>
+                  <p>Сергій</p>
                 </div>
                 <a class="tutors-card__course-link more-info-link" data-trigger="4">Відгук повністю</a>
               </div>
@@ -695,9 +695,96 @@
                 </div>
                 <div class="tutors-card__tutor">
                   <p>Викладач:</p>
-                  <p>Яна Паламарчук</p>
+                  <p>Яна</p>
                 </div>
                 <a class="tutors-card__course-link more-info-link" data-trigger="5">Відгук повністю</a>
+              </div>
+            </div>
+          </div>
+          <div class="tutors-card">
+            <div class="tutors-card__top">
+              <div class="tutors-card__img">
+                <img src="img/feedback/woman.svg" alt="tutor" />
+              </div>
+              <p class="tutors-card__name">Дарина</p>
+              <div class="tutors-card__rate">
+                <i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+                ><i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+                ><i class="mentors__star fa-solid fa-star"></i>
+              </div>
+            </div>
+            <div class="container">
+              <div class="tutors-card__info">
+                <p class="tutors-card__description">
+                  Все добре, після вашої допомоги, як магічний пендель пішло діло!
+                </p>
+                <div class="tutors-card__course">
+                  <p>Курс:</p>
+                  <p>Front-End</p>
+                </div>
+                <div class="tutors-card__tutor">
+                  <p>Викладач:</p>
+                  <p>Андрій</p>
+                </div>
+                <a class="tutors-card__course-link more-info-link" data-trigger="6">Відгук повністю</a>
+              </div>
+            </div>
+          </div>
+          <div class="tutors-card">
+            <div class="tutors-card__top">
+              <div class="tutors-card__img">
+                <img src="img/feedback/man.svg" alt="tutor" />
+              </div>
+              <p class="tutors-card__name">Семен</p>
+              <div class="tutors-card__rate">
+                <i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+                ><i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+                ><i class="mentors__star fa-solid fa-star"></i>
+              </div>
+            </div>
+            <div class="container">
+              <div class="tutors-card__info">
+                <p class="tutors-card__description">
+                  Все відмінно. Чудовий вчитель
+                </p>
+                <div class="tutors-card__course">
+                  <p>Курс:</p>
+                  <p>Front-End</p>
+                </div>
+                <div class="tutors-card__tutor">
+                  <p>Викладач:</p>
+                  <p>Руслан</p>
+                </div>
+                <a class="tutors-card__course-link more-info-link" data-trigger="7">Відгук повністю</a>
+              </div>
+            </div>
+          </div>
+          <div class="tutors-card">
+            <div class="tutors-card__top">
+              <div class="tutors-card__img">
+                <img src="img/feedback/man.svg" alt="tutor" />
+              </div>
+              <p class="tutors-card__name">Віталій</p>
+              <div class="tutors-card__rate">
+                <i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+                ><i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+                ><i class="mentors__star fa-solid fa-star"></i>
+              </div>
+            </div>
+            <div class="container">
+              <div class="tutors-card__info">
+                <p class="tutors-card__description">
+                  Навчання проходить добре. Андрій дуже хороший викладач, який вміє грамот...
+                </p>
+                <div class="tutors-card__course">
+                  <p>Курс:</p>
+                  <p>Front-End</p>
+                </div>
+                <div class="tutors-card__tutor">
+                  <p>Викладач:</p>
+                  <p>Андрій</p>
+                </div>
+                <a class="tutors-card__course-link more-info-link" data-trigger="8">Відгук повністю</a>
               </div>
             </div>
           </div>
@@ -1082,7 +1169,7 @@
         </div>
         <p class="feedback-popup__text">
           Навчання в N-Code дуже сподобалось. Викладачі мають професійний підхід, дуже добре пояснюють матеріал, доброзичливі. Графік
-          навчань гнучкий, що дуже зручно. Я цілком задоволена навчанням))
+          навчань гнучкий, що дуже зручно. Я цілком задоволена навчанням.
         </p>
         <div class="feedback-popup__item">
           <p>Курс:</p>
@@ -1090,7 +1177,7 @@
         </div>
         <div class="feedback-popup__item">
           <p>Викладач:</p>
-          <p>Михайло Великосельський</p>
+          <p>Михайло</p>
         </div>
       </div>
     </div>
@@ -1100,20 +1187,20 @@
         <div class="feedback-popup__img">
           <img src="img/feedback/woman.svg" alt="tutor" />
         </div>
-        <p class="feedback-popup__name">Юлия</p>
+        <p class="feedback-popup__name">Юлія</p>
         <div class="tutors-card__rate">
           <i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
           ><i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
           ><i class="mentors__star fa-solid fa-star"></i>
         </div>
-        <p class="feedback-popup__text">Отлично. Все нравится, все устраивает </p>
+        <p class="feedback-popup__text">Чудово. Все подобається, все влаштовує </p>
         <div class="feedback-popup__item">
           <p>Курс:</p>
           <p>Front-End</p>
         </div>
         <div class="feedback-popup__item">
           <p>Викладач:</p>
-          <p>Владислав Хаус</p>
+          <p>Владислав</p>
         </div>
       </div>
     </div>
@@ -1129,14 +1216,14 @@
           ><i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
           ><i class="mentors__star fa-solid fa-star"></i>
         </div>
-        <p class="feedback-popup__text">3 навчанням все добре, мені все подобається. Репетитор класний, все добре пояснює та навчає!)</p>
+        <p class="feedback-popup__text">3 навчанням все добре, мені все подобається. Репетитор класний, все добре пояснює та навчає!</p>
         <div class="feedback-popup__item">
           <p>Курс:</p>
           <p>Front-End</p>
         </div>
         <div class="feedback-popup__item">
           <p>Викладач:</p>
-          <p>Олексій Козаковський</p>
+          <p>Олексій</p>
         </div>
       </div>
     </div>
@@ -1153,7 +1240,7 @@
           ><i class="mentors__star fa-solid fa-star"></i>
         </div>
         <p class="feedback-popup__text">
-          Навчання йде не погано. Займаюсь з Сергієм, дуже хороший ментор. Я людина, яка не говорить багато, взагалі мене все влаштовує
+          Навчання йде не погано. Займаюсь з Сергієм, дуже хороший ментор. 
         </p>
         <div class="feedback-popup__item">
           <p>Курс:</p>
@@ -1161,7 +1248,7 @@
         </div>
         <div class="feedback-popup__item">
           <p>Викладач:</p>
-          <p>Сергій Популях</p>
+          <p>Сергій</p>
         </div>
       </div>
     </div>
@@ -1184,11 +1271,85 @@
         </div>
         <div class="feedback-popup__item">
           <p>Викладач:</p>
-          <p>Яна Паламарчук</p>
+          <p>Яна</p>
         </div>
       </div>
     </div>
-
+    <div class="popup feedback-popup" data-content="6">
+      <div class="popup-body">
+        <div class="popup__close"></div>
+        <div class="feedback-popup__img">
+          <img src="img/feedback/woman.svg" alt="tutor" />
+        </div>
+        <p class="feedback-popup__name">Дарина</p>
+        <div class="tutors-card__rate">
+          <i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+          ><i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+          ><i class="mentors__star fa-solid fa-star"></i>
+        </div>
+        <p class="feedback-popup__text">
+          Все добре, після вашої допомоги, як магічний пендель пішло діло!
+        </p>
+        <div class="feedback-popup__item">
+          <p>Курс:</p>
+          <p>Front-End</p>
+        </div>
+        <div class="feedback-popup__item">
+          <p>Викладач:</p>
+          <p>Олексій</p>
+        </div>
+      </div>
+    </div>
+    <div class="popup feedback-popup" data-content="7">
+      <div class="popup-body">
+        <div class="popup__close"></div>
+        <div class="feedback-popup__img">
+          <img src="img/feedback/man.svg" alt="tutor" />
+        </div>
+        <p class="feedback-popup__name">Семен</p>
+        <div class="tutors-card__rate">
+          <i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+          ><i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+          ><i class="mentors__star fa-solid fa-star"></i>
+        </div>
+        <p class="feedback-popup__text">
+          Все відмінно. Чудовий вчитель
+        </p>
+        <div class="feedback-popup__item">
+          <p>Курс:</p>
+          <p>Front-End</p>
+        </div>
+        <div class="feedback-popup__item">
+          <p>Викладач:</p>
+          <p>Руслан</p>
+        </div>
+      </div>
+    </div>
+    <div class="popup feedback-popup" data-content="8">
+      <div class="popup-body">
+        <div class="popup__close"></div>
+        <div class="feedback-popup__img">
+          <img src="img/feedback/man.svg" alt="tutor" />
+        </div>
+        <p class="feedback-popup__name">Віталій</p>
+        <div class="tutors-card__rate">
+          <i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+          ><i class="mentors__star fa-solid fa-star"></i><i class="mentors__star fa-solid fa-star"></i
+          ><i class="mentors__star fa-solid fa-star"></i>
+        </div>
+        <p class="feedback-popup__text">
+          Навчання проходить добре. Андрій дуже хороший викладач, який вміє грамотно подати матеріал. Планую й надалі навчатися та розвиватися разом з N-Code.
+        </p>
+        <div class="feedback-popup__item">
+          <p>Курс:</p>
+          <p>Front-End</p>
+        </div>
+        <div class="feedback-popup__item">
+          <p>Викладач:</p>
+          <p>Андрій</p>
+        </div>
+      </div>
+    </div>
     <div class="popup popap-templ became-mentor-popup">
       <div class="popup-body">
         <div class="popup__close"></div>
