fix mobile view in pages

--- a/tutors.html
+++ b/tutors.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/popap-templ.css" />
     <link rel="stylesheet" href="css/became-mentor-popup.css" />
     <link rel="stylesheet" href="css/mentor-info-popup.css" />
+    <link rel="stylesheet" href="css/tutors-page.css" />
     <title>N-Code</title>
   </head>
 
